backend/backend_deployment/networkpolicies/api-egress-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: quiz-app
  name: api-egress-policy
spec:
  podSelector:
    matchLabels:
      app: quiz-api
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    - podSelector:
        matchLabels:
          app: quiz-api
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
