backend/backend_deployment/networkpolicies/deny-api-access.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: quiz-app
  name: deny-api-access
spec:
  podSelector:
    matchLabels:
      app: quiz-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: quiz-ui
