backend/backend_deployment/networkpolicies/ui-egress-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: quiz-app
  name: ui-egress-policy
spec:
  podSelector:
    matchLabels:
      app: quiz-ui
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: quiz-api
